# fine-tune-llm

./: .gitignore  Modelfile  create-dataset.py  generate-template.py  main.py  merge_lora.py  pyproject.toml  set-input-context.py  train.py  training.py
data/: ft_dataset-registration-act.jsonl  registration-act.json
input-data/: others.json  registration-act.json  state-aquisition.json  the-transfer-of-property-act.json
output-data/: others.json  others.jsonl  registration-act.json  registration-act.jsonl  state-aquisition.json  state-aquisition.jsonl  the-transfer-of-property-act.json  the-transfer-of-property-act.jsonl
utils/: util.py
